--- a/package.json
+++ b/package.json
@@ -1,18 +1,70 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "NODE_ENV=development webpack --mode=development",
+        "watch": "npm run dev -- --watch",
+        "prod": "NODE_ENV=production webpack --mode=production"
+    },
+    "standardx": {
+        "parser": "babel-eslint",
+        "plugins": [
+          "flowtype"
+        ],
+        "ignore": [
+          "public/*"
+        ],
+        "env": [
+          "jest",
+          "es6",
+          "browser"
+        ]
+      },
+    "dependencies": {
+        "@babel/core": "^7.10.2",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/plugin-proposal-decorators": "^7.10.1",
+        "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+        "@babel/polyfill": "^7.10.1",
+        "@babel/preset-env": "^7.11.5",
+        "@babel/preset-flow": "^7.10.1",
+        "@babel/preset-react": "^7.10.1",
+        "axios": "^0.21.1",
+        "babel-loader": "^8.1.0",
+        "classnames": "^2.2.6",
+        "clean-webpack-plugin": "^1.0.1",
+        "css-loader": "^5.0.1",
+        "deepmerge": "^3.3.0",
+        "domready": "^1.0.8",
+        "file-loader": "^6.2.0",
+        "less": "^3.11.3",
+        "less-loader": "^7.0.1",
+        "lodash": "^4.17.20",
+        "mini-css-extract-plugin": "^1.3.1",
+        "normalize.css": "^8.0.0",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "style-loader": "^0.18.2",
+        "svg-url-loader": "^2.3.3",
+        "uglifyjs-webpack-plugin": "^1.3.0",
+        "webpack": "^5.6.0",
+        "webpack-manifest-plugin": "^3.0.0",
+        "whatwg-fetch": "^3.4.1",
+        "eslint-plugin-react-hooks": "^4.1.2"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.14.0",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-flowtype": "^5.2.0",
+        "eslint-plugin-react": "^7.21.5",
+        "husky": "^4.3.0",
+        "lint-staged": "^10.5.2",
+        "standardx": "^7.0.0",
+        "webpack-cli": "^4.2.0",
+        "webpack-notifier": "^1.8.0"
     }
 }
