--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "serve": "php artisan serve",
         "dev": "NODE_ENV=development webpack --mode=development",
         "watch": "npm run dev -- --watch",
         "prod": "NODE_ENV=production webpack --mode=production"
