--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -37,6 +37,18 @@ build:
         path: node_modules
         key: yarn-${{ hashFiles('yarn.lock') }}
 
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
+      env:
+      DB_CONNECTION: sqlite
+      DB_DATABASE: database/database.sqlite
+      run: vendor/bin/phpunit
+
     - name: Run yarn
       run: yarn install
 
