--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -2,7 +2,7 @@ name: Lavel Deploy v1
 on:
   push:
     branches:
-      - main
+      - production
 
 jobs:
   build:
@@ -30,6 +30,9 @@ jobs:
         run: |
           cp .env.example .env
           php artisan key:generate
+
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
 
       - name: Cache yarn dependencies
         uses: actions/cache@v1
