simulating deploy on push

--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -42,3 +42,11 @@ jobs:
 
       - name: Run yarn
         run: yarn install
+
+      - name: Deploy to Firebase Hosting on PUSH
+          uses: FirebaseExtended/action-hosting-deploy@v0
+          with:
+            repoToken: "${{ secrets.GITHUB_TOKEN }}"
+            firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+            expires: 30d
+            projectId: product-manager-58901
