--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "framework",
     "laravel"
   ],
+  "require": {
+    "php": "^7.3|^8.0",
+    "guzzlehttp/guzzle": "^7.0.1",
+  },
   "license": "MIT",
   "scripts": {
     "post-install-cmd": [
