--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "require": {
     "php": "^7.3|^8.0",
-    "guzzlehttp/guzzle": "^7.0.1",
+    "guzzlehttp/guzzle": "^7.0.1"
   },
   "license": "MIT",
   "scripts": {
