--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
   "scripts": {
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php product-manager-web/artisan package:discover --ansi"
+      "@php product-manager-web/artisan package:discover --ansi",
+      "@php product-manager-web/artisan route:clear"
     ],
     "post-root-package-install": [
       "@php -r \"file_exists('product-manager-web/.env') || copy('product-manager-web/.env.example', 'product-manager-web/.env');\""
